# meta_agent_project

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_PYTHON_VERSION.md  push_to_github.sh  pyproject.toml  pyrightconfig.json  verify_integration.py
.github/workflows/: ci.yml
config/default/: app.toml
config/prod/: app.toml
config/test/: app.toml
docker/: Dockerfile  docker-compose.yml
docs/: cross_platform.md  interop.md
meta_agent_project/: Dockerfile  docker-compose.yml  fix_datetime.py
meta_agent_project/config/: prometheus.yml
meta_agent_project/src/meta_agent/: __init__.py
meta_agent_project/src/meta_agent/agent/: __init__.py
meta_agent_project/src/meta_agent/core/: config.py  di_container.py  event_bus.py  logging.py  service_registry.py
meta_agent_project/src/meta_agent/hotload/: __init__.py  dynamic_registry.py  hot_loader.py
meta_agent_project/src/meta_agent/llm/: batch_processor.py  dialog_memory.py  distill_evolver.py  llm_cache.py  llm_client_wrapper.py  meta_thinker.py
meta_agent_project/src/meta_agent/models/: __init__.py  evolution.py
meta_agent_project/src/meta_agent/monitoring/: health.py
meta_agent_project/tools/quality_gate/: quality_reporter.py  quality_scorer.py
scripts/: fix_datetime.py  start.sh
src/go/: README.md  go.mod
src/go/cmd/: main.go
src/go/pkg/proto/: meta_agent.proto  proto.go
src/meta_agent/: __init__.py  main.py
src/meta_agent/agent/: meta_agent.py
src/meta_agent/api/: __init__.py
src/meta_agent/config/: __init__.py  loader.py
src/meta_agent/core/: __init__.py  event_bus.py  exceptions.py  interfaces.py  security.py  service_registry.py  state_manager.py
src/meta_agent/hotload/: component_watcher.py  dynamic_registry.py  hot_loader.py
src/meta_agent/llm/: __init__.py  batch_processor.py  dialog_memory.py  distill_evolver.py  llm_cache.py  llm_client_wrapper.py  llm_observability.py  meta_thinker.py  rate_limiter.py
src/meta_agent/models/: __init__.py  state.py  task.py
src/meta_agent/monitoring/: __init__.py  metrics.py  tracing.py
src/meta_agent/utils/: __init__.py  helpers.py  validators.py
src/python/meta_agent/: __init__.py
src/python/meta_agent/adapters/: __init__.py  go_adapter.py  rust_adapter.py
src/rust/: Cargo.toml  README.md
src/rust/benches/: benchmark.rs
src/rust/src/: lib.rs
tests/: conftest.py
tests/e2e/: test_workflow.py
tests/integration/: test_cross_lang.py  test_integration.py  test_system_integration.py
tests/unit/: test_core.py
tools/quality_gate/: __init__.py  quality_gate.py
测试体系专项/: conftest.py
